# conduit

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  bacon.toml  build.rs  config.example.toml  docker-compose.yaml  rustfmt.toml  ssh_host_ed25519_key  ssh_host_ed25519_key.pub  test.sh
.cargo/: config.toml
.github/workflows/: ci.yml
.sqlx/: query-04d7b49668ad33e77cfb1e2720a19df192fd8404d2f023aece4d4310ea89a339.json  query-0a88b81b9397f51ed4ab74478aff564779908317f23378ca8472bebafda00c1c.json  query-0b8abbae300cb5241830303f80ac7adc51435b3cf35aa96d5f721796a112e070.json  query-11c39fa0c9898168751d27aac914560c0c846e46e79ffee97e800e9c9dc1d315.json  query-1bb0310fe876f9c43bb9f7585cf4a643c1958bef78c318a794a798574f28c2a8.json  query-20f2371e80d2081319cf87406cbcf45832b70778aa08b1361c770eced867e535.json  query-21a8079aedc65c756fc6db96f80afc81ed24e35f82c988f65713b65ef2f55bab.json  query-2427de2b1ccfa7033d6ddd140af09048b276b8b5427870e0f52dd916e945f19a.json  query-4277b36562366c35d633b5b6e949773e0e119c2fe558fea4949a590966081aea.json  query-432199a7e3f70dc040f4728aaadab60c079e8c970dd2b452260bb37ef1c0c9af.json  query-45794f9835b0a639a1e9e688f5fea60309d5b1e0e6dd87f9792ae8ff47997c38.json  query-4b84ca80c05f4911d0b68b3b85511bc236605f64dfc963062dd75bebfe0fd441.json  query-7b95e113ef8703aded4890b79296d993bae4903ef0c18878bd19e5b936b84ab3.json  query-7c87cfb8e18130da4211c7450ce86a06656e20381d6bfd67d83e5e7f3faafe57.json  query-809b1fa978f53a13642cc78cf1afb6bf26ffcaa00b258cce364372e481d393a6.json  query-81def6c37a099351d06b79b44b61739503dff4acaafa278679be64c8fe6cabfc.json  query-8c248284986381f6889d8c8ca45ab5449c674587b37598374972ebbc89bbaf7b.json  query-9b9fc5395244ff7c24c2314549ac085bc03649b1ea9316cf0c09e6ce1a28fa60.json  query-ae06891a1ed481e0ba535b271df9d900c1e9b98447858208668c1b59e814c2f4.json  query-ce286b1d996e8cfa96cdb87d681372bd839fab18cb848d334c648c2e98e276c9.json  query-ceff91891402cb2371ae5dbb768a3585f1c733c787234047b769c281c40d0c48.json  query-d3c3f103238682360cf599ad12c94a8a841e2e7384f323c719d753f4538d7b5b.json  query-dd99e48b1572e25db38f03da95984fda1072913b29bb6b3753a0d351583dfff6.json  query-e678baf3fed9e4faeacd1f34510231b31967f32c0414654087044d664583dc25.json  query-ea3f5ac8127f232cddf76be9c3f4144c9e937f46eff85d822c285bdb373ff2d3.json  query-f1d488386e844822412900ef58b0ac320f7a76042d2bc3e438d8412b28de22be.json  query-f5148032fe279fda98897fef70ad278d8d57e882a25819c1de8838f691bcdb20.json
derive/: Cargo.toml
derive/src/: lib.rs
migrations/: 0001-initial.sql  0001_initial.sql
public/assets/: autoreload.js  index.css
src/: auth.rs  config.rs  db.rs  main.rs  metrics.rs  signal.rs  ssh.rs  state.rs  utils.rs  validate.rs
src/jobs/: lfs_tokens.rs  mod.rs  web_sessions.rs
src/libssh/: channel.rs  error.rs  listener.rs  mod.rs  session.rs  util.rs
src/middleware/: auth.rs  mod.rs  panic.rs  trace.rs
src/model/: lfs.rs  mod.rs  paste.rs  session.rs  user.rs
src/routes/: assets.rs  autoreload.rs  error.rs  lfs.rs  mod.rs  shell.rs
src/routes/hub/: mod.rs  profile.rs
src/routes/login/: login.rs  logout.rs  mod.rs
src/routes/meta/: account.rs  keys.rs  login.rs  logout.rs  mod.rs  profile.rs  register.rs  security.rs
src/routes/paste/: manage.rs  mod.rs  view.rs
src/ssh/transport/: consts.rs
src/utils/: cancellable_stream.rs  mod.rs  mut_waker.rs  ring_buf.rs
styles/: index.css
