[package]
name = "conduit"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[dependencies]
tokio = { version = "1.48.0", features = ["rt", "macros", "net", "time", "sync", "signal"] }
tokio-util = { version = "0.7.17", features = ["rt"] }
axum = { version = "0.8.7", default-features = false, features = ["http1", "tokio", "form", "query"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }
maud = { version = "0.27.0", features = ["axum"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres", "time", "macros", "migrate"] }
rand = "0.9.2"
time = { version = "0.3.44", features = ["formatting"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["std", "fmt", "ansi"] }
log = "0.4.28"
prometheus = { version = "0.14.0", default-features = false }
dotenvy = "0.15.7"

[profile.dev]
debug = "line-tables-only"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
